# merge_mesh

./: CMakeLists.txt  README.md  test.sbatch  wholewall3solid.STEP
merge_mesh/: CMakeLists.txt  merge_elmer.cpp
mesh_occ_mpi/: 3DNgmesher.cpp  3DNgmesher.h  CMakeLists.txt  createElmerOutput.h  occmesh_MPI_main.cpp  parallelMeshData.h
